# Frontend_Backend_Proj

./: docker-compose.yml
asdfa/: Dockerfile
asdfa/DjangoRestAPI/DjangoRestAPI/: settings.py  urls.py
asdfa/DjangoRestAPI/proj/: models.py
asdfa/DjangoRestAPI/proj/api/: urls.py  views.py
asdfa/DjangoRestAPI/proj/migrations/: 0002_country.py  0003_state.py
backend/: pyproject.toml
backend/DjangoRestAPI/: db.sqlite3
backend/DjangoRestAPI/proj/: urls.py
backend/DjangoRestAPI/proj/api/: serializers.py
backend/DjangoRestAPI/proj/migrations/: 0001_initial.py
my-app/: Dockerfile  package-lock.json
my-app/public/: index.html
my-app/src/: AddButton.js  App.js  Body.js  Dropdown.js  DropdownOption.js  Main.css  NavBar.js  SubmitCard.js  index.js
